--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "tsc",
     "clean": "rimraf src/**/*.d.ts src/**/*.js .dist",
     "webpack": "webpack",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "test": "nyc ava test/**/*.test.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "config": {
     "commitizen": {
@@ -46,8 +48,10 @@
     "@types/websocket": "0.0.40",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
+    "ava": "^1.4.1",
     "chalk": "^2.4.2",
     "commitizen": "^3.0.7",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-standard-with-typescript": "^7.0.0",
     "eslint-plugin-import": "^2.17.2",
@@ -57,8 +61,11 @@
     "fs-extra": "^7.0.1",
     "is-ci": "^2.0.0",
     "kaomojify-webpack-plugin": "^0.1.1",
+    "nyc": "^14.0.0",
     "rimraf": "^2.6.3",
     "semantic-release": "^15.13.12",
+    "source-map-support": "^0.5.12",
+    "ts-node": "^8.1.0",
     "typescript": "^3.4.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
