chore: Configure for test and coverage.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "typeRoots": [
       "node_modules/@types",
       "types"
-    ]
+    ],
+    "inlineSourceMap": true
   },
   "include": [
     "src/**/*.ts"
