--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-standard": "^8.0.1",
-    "typedoc": "github:jonchardy/typedoc#category-fixes",
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-external-module-name": "^2.0.0",
     "typescript": "^3.4.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
