--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node SDK for developing QQ chatbots based on WebSocket, which is depending on CoolQ and CQHTTP API plugin. ",
   "main": "./src/index",
   "engines": {
-    "cqhttp": "^4.5.0",
+    "cqhttp": "^4.10",
     "node": ">=8"
   },
   "scripts": {
@@ -52,11 +52,13 @@
     "coveralls": "^3.0.3",
     "env-cmd": "^8.0.2",
     "fs-extra": "^7.0.1",
+    "gulp": "^4.0.1",
     "is-ci": "^2.0.0",
     "kaomojify-webpack-plugin": "^0.1.1",
     "nyc": "^14.0.0",
     "rimraf": "^2.6.3",
     "semantic-release": "^15.13.12",
+    "semver": "^6.0.0",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
