--- a/package.json
+++ b/package.json
@@ -41,18 +41,18 @@
   },
   "homepage": "https://github.com/momocow/node-cq-websocket#readme",
   "dependencies": {
-    "@types/lodash": "^4.14.132",
-    "@types/nanoid": "^1.2.1",
-    "@types/websocket": "0.0.40",
-    "lodash": "^4.17.11",
+    "binary-search": "^1.3.5",
+    "lodash.get": "^4.4.2",
     "nanoid": "^2.0.1",
-    "strict-event-emitter-types": "^2.0.0",
     "websocket": "^1.0.28"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
     "@semantic-release/release-notes-generator": "^7.1.4",
+    "@types/lodash.get": "^4.4.6",
+    "@types/nanoid": "^1.2.1",
+    "@types/websocket": "0.0.40",
     "ava": "^1.4.1",
     "chalk": "^2.4.2",
     "commitizen": "^3.0.7",
@@ -67,6 +67,7 @@
     "semantic-release": "^15.13.16",
     "semver": "^6.0.0",
     "source-map-support": "^0.5.12",
+    "strict-event-emitter-types": "^2.0.0",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-standard": "^8.0.1",
@@ -75,8 +76,5 @@
     "typescript": "^3.4.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
-  },
-  "optionalDependencies": {
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v15.10.0"
   }
 }
