--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@types/websocket": "^0.0.40",
+    "p-timeout": "^3.1.0",
     "websocket": "^1.0.29"
   },
   "devDependencies": {
