--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,10 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": [
+      "error", { "allowExpressions": true }
+    ]
   }
 }
