--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "dependencies": {
     "@types/websocket": "^0.0.40",
+    "debug": "^4.1.1",
+    "lodash.merge": "^4.6.2",
     "p-timeout": "^3.1.0",
     "websocket": "^1.0.29"
   },
@@ -57,6 +59,8 @@
     "@semantic-release/github": "^5.4.2",
     "@semantic-release/npm": "^5.1.13",
     "@semantic-release/release-notes-generator": "^7.2.1",
+    "@types/debug": "^4.1.5",
+    "@types/lodash.merge": "^4.6.6",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "ava": "^2.2.0",
