--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "semantic-release": "^15.13.19",
+    "sinon": "^7.4.2",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
