--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@types/websocket": "^0.0.40",
     "debug": "^4.1.1",
     "lodash.merge": "^4.6.2",
-    "p-timeout": "^3.1.0",
+    "nanoid": "^2.1.2",
+    "p-timeout": "^3.2.0",
     "websocket": "^1.0.29"
   },
   "devDependencies": {
@@ -61,6 +62,7 @@
     "@semantic-release/release-notes-generator": "^7.2.1",
     "@types/debug": "^4.1.5",
     "@types/lodash.merge": "^4.6.6",
+    "@types/nanoid": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "ava": "^2.2.0",
@@ -75,6 +77,7 @@
     "fs-extra": "^8.1.0",
     "is-ci": "^2.0.0",
     "kaomojify-webpack-plugin": "^0.1.1",
+    "lodash": "^4.17.15",
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "semantic-release": "^15.13.19",
