--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,9 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": [
       "error", { "allowExpressions": true }
+    ],
+    "@typescript-eslint/promise-function-async": [
+      "error", { "allowAny": true }
     ]
   }
 }
