--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "stripInternal": true
+    "stripInternal": true,
+    "typeRoots": [
+      "./node_modules/@types/",
+      "./types/"
+    ]
   },
   "include": [
     "src/**/*.ts"
