--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "cq-websocket",
   "version": "2.0.0",
   "description": "A Node SDK for developing QQ chatbots based on WebSocket, which is depending on CoolQ and CQHTTP API plugin. ",
-  "main": "src/index",
+  "main": "lib/index",
   "engines": {
     "cqhttp": ">=4.6.0",
     "node": ">=8"
   },
   "files": [
-    "src",
+    "lib",
     "dist/**/*.min.js"
   ],
   "scripts": {
     "build": "npm run build:tsc && npm run build:webpack",
     "build:webpack": "webpack --config webpack.config.js",
     "build:tsc": "tsc",
-    "clean": "rimraf \"src/**/*.d.ts\" \"src/**/!(*.spec).js\" \".dev\"",
+    "clean": "rimraf \"lib/**/*.d.ts\" \"lib/**/!(*.spec).js\" \".dev\"",
     "commit": "git-cz",
-    "lint": "eslint --ext .ts src",
+    "lint": "eslint --ext .ts lib",
     "test": "ava --config ava.config.js",
     "test:ci": "nyc ava --config ava-ci.config.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
@@ -46,7 +46,9 @@
   },
   "dependencies": {
     "@types/websocket": "^0.0.40",
-    "fast-json-stable-stringify": "^2.0.0",
+    "debug": "^4.1.1",
+    "nanoid": "^2.1.2",
+    "p-timeout": "^3.2.0",
     "websocket": "^1.0.29"
   },
   "devDependencies": {
@@ -57,6 +59,9 @@
     "@semantic-release/github": "^5.4.2",
     "@semantic-release/npm": "^5.1.13",
     "@semantic-release/release-notes-generator": "^7.2.1",
+    "@types/debug": "^4.1.5",
+    "@types/lodash.merge": "^4.6.6",
+    "@types/nanoid": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "ava": "^2.2.0",
@@ -71,12 +76,14 @@
     "fs-extra": "^8.1.0",
     "is-ci": "^2.0.0",
     "kaomojify-webpack-plugin": "^0.1.1",
+    "lodash": "^4.17.15",
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "semantic-release": "^15.13.19",
+    "sinon": "^7.4.2",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.6.2",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   }
