--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,14 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "stripInternal": true,
+    "typeRoots": [
+      "./node_modules/@types/",
+      "./types/"
+    ]
   },
   "include": [
-    "src/**/*.ts"
+    "lib/**/*.ts"
   ]
 }
