--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: node_js
 node_js:
-  - 8
-  - 10
   - 12
 
 script:
@@ -11,7 +9,7 @@ script:
 jobs:
   include:
     - stage: release
-      node_js: 10
+      node_js: lts/*
       script:
         - npm run build
       deploy:
