--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@semantic-release/github": "^5.5.4",
     "@semantic-release/npm": "^5.2.0",
     "@semantic-release/release-notes-generator": "^7.3.0",
+    "@types/node": "^12.11.6",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.4.0",
     "ava": "^2.4.0",
