--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "commit": "git-cz",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "release-it": "release-it"
   },
   "repository": {
     "type": "git",
@@ -69,6 +70,7 @@
     "mri": "^1.1.4",
     "nyc": "^14.1.1",
     "proxyquire": "^2.1.0",
+    "release-it": "^12.4.3",
     "semantic-release": "^15.13.23",
     "sinon": "^7.2.6",
     "tape": "^4.10.1",
